# ctx-guard

./: CHANGELOG.md  README.md  package-lock.json  package.json  watcher.js
.github/workflows/: ci.yml
ctx-guard-tray/: float.html  index.html  package-lock.json  package.json  vite.config.ts
ctx-guard-tray/public/: float.html
ctx-guard-tray/src/: float.ts
ctx-guard-tray/src-tauri/: Cargo.toml  tauri.conf.json
ctx-guard-tray/src-tauri/capabilities/: default.json
ctx-guard-tray/src-tauri/src/: lib.rs  main.rs
src/: reader.js  ui.js
test/: reader.test.js
