[package]
name = "ctx-guard-tray"
version = "0.1.0"
description = "ctx-guard - Claude context monitor"
authors = ["you"]
edition = "2021"

[lib]
name = "ctx_guard_tray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
dirs = "6"
