[package]
name = "ctx-guard-tray"
version = "2.5.0"
description = "ctx-guard — Never lose your Cowork context again"
authors = ["wangyuanliang2009-max"]
edition = "2021"

[lib]
name = "ctx_guard_tray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
